<<<<<<< HEAD
=== 2018

2.0.0RC6
	adjust behavior of locarna and mlocarna for pairwise alignments
	-- do not use alifold in binaries when calculating base pairs for single sequences
	-- use noLP in mlocarna for calculating base pair probabilties /and/ the alignment
	-- increase output precision for probabilities in pp files
	   (reducing rounding issues for the typical cutoff)

2.0.0RC5 (2018-05-08)
	Allow penalized in global alignment

2.0.0RC4 (2018-05-04)
	Bugfixes:
	---------
	Fix kbest HIT line
        Fix static linking (with gomp)
        Remove one extra line after CLUSTAL header (which used to be written by mlocarna)

2.0.0RC3 (2018-04-30)
	Bugfixes:
	---------
	Fix kbest alignment (allow and detect empty alignments)
	Fix local end output (HIT line) for non-local alignments

	Features / Improvements:
	------------------------
        Add stopwatch (for consensus computation)
	Introduce parameter --consensus-gamma for mea consensus 'gamma'

	API:
	------------------------
	Class Alignment handles start and end position for non-local
	alignments; methods local_start(), local_end() of Alignment are
	replaced by start_positions(), end_positions()

2.0.0RC2 (2018-04-16)
	Bugfixes:
	---------
	  Fix free endgaps bug
	     (negative alignment scores were handled incorrectly)
	  Fix empty anchor constraint
	     (correctly recognize/report when anchors are specified)

	Features / Improvements:
	------------------------
          [Both improvements were introduced to handle large instances]
	  Improve alifold consensus computation
	    - turn off by default (also speeds up mlocarna)
	    - handle cases where consensus is not/cannot be computed
	    - warn if consensus is not computed / fail if explicitely
	      required (pp)
	    - handle recomputation of consensus if file/screen output differ
	      (local out)
	  Support sequence envelope computation with extended precision
	    - set the default to extended precision